--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,30 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  #__next {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+
+    > .container {
+      flex-grow: 1;
+    }
+  }
+}
+
+body {
+  min-height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
