--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,30 @@
+// Variables
+$color-text: #000000;
+$color-gray: #212121;
+$color-white: #ffffff;
+
+$default-transition: all .6s ease-in-out;
+
+// Resets
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: $color-text;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+button {
+  border: none;
+  background: none;
 }
 
+// Styles
 html {
   height: 100%;
 }
@@ -14,6 +33,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 
   #__next {
     flex-grow: 1;
@@ -26,15 +46,63 @@ body {
   }
 }
 
-body {
-  min-height: 100%;
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+
+// Buttons
+.btn-big-rounded {
+  background-color: $color-white;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  box-shadow: -3px -3px 6px rgba(255, 255, 255, 0.5),
+  2px 2px 6px rgba(95, 92, 89, 0.12),
+  4px 4px 11px rgba(177, 167, 162, 0.4);
+  transition: $default-transition;
+
+  &:hover {
+    background-color: $color-gray;
+  }
+}
+.btn-translucent {
+  min-width: 180px;
+  border-radius: 20px;
+  padding: .5em 1em;
+  background-color: rgba($color-white, .3);
+  transition: $default-transition;
+
+  &:hover {
+    background-color: rgba($color-white, 1);
+  }
+}
+
+// Intro page
+.full-page-video {
+  position: relative;
+
+  video {
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
+    object-fit: cover;
+  }
+
+  .btn-big-rounded {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .btn-translucent {
+    position: absolute;
+    z-index: 10;
+    bottom: 10vh;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
