--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,9 @@ $color-gray: #212121;
 $color-white: #ffffff;
 
 $default-transition: all .6s ease-in-out;
+$default-box-shadow: -3px -3px 6px rgba(255, 255, 255, 0.5),
+    2px 2px 6px rgba(95, 92, 89, 0.12),
+    4px 4px 11px rgba(177, 167, 162, 0.4);
 
 // Resets
 html,
@@ -54,9 +57,7 @@ a {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  box-shadow: -3px -3px 6px rgba(255, 255, 255, 0.5),
-  2px 2px 6px rgba(95, 92, 89, 0.12),
-  4px 4px 11px rgba(177, 167, 162, 0.4);
+  box-shadow: $default-box-shadow;
   transition: $default-transition;
 
   &:hover {
@@ -80,6 +81,37 @@ a {
   width: 100%;
 }
 
+.round-wp{
+  border-radius: 50%;
+  border: 12px solid $color-white;
+  overflow: hidden;
+  box-shadow: $default-box-shadow;
+  display: inline-flex;
+}
+
+.line-separator {
+  position: relative;
+  padding: 80px 0;
+  width: 100%;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: 1px;
+    display: block;
+    width: 2px;
+    height: 100%;
+    background-color: $color-white;
+    box-shadow: $default-box-shadow;
+  }
+
+  &.line-separator--half-height {
+    padding: 40px 0;
+  }
+}
+
 // Intro page.
 .container-video-intro {
   position: relative;
@@ -94,5 +126,38 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+}
+
+
+//Carousel item
+.carousel-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .image,
+  .title,
+  .button{
+    margin-bottom: 40px;
+  }
+
+  .image {
+    width: 80%;
+    max-width: 530px;
+  }
+
+  .title {
+    text-transform: uppercase;
+    font-size: 2em;
+    line-height: 1em;
+    text-align: center;
+    max-width: 780px;
+    padding: 0 30px;
+  }
+
+  .button {
+    text-transform: uppercase;
+    padding: 0 30px;
   }
 }
