--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,6 +52,10 @@ a {
 
 
 // Buttons
+.btn {
+  text-transform: uppercase;
+  padding: 0 30px;
+}
 .btn-big-rounded {
   background-color: $color-white;
   border-radius: 50%;
@@ -80,13 +84,24 @@ a {
   height: 100%;
   width: 100%;
 }
+.container-screen-fit {
+  min-height: 100vh;
+  width: 100%;
+}
+
+.content {
+  max-width: 982px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
 .round-wp{
+  display: inline-flex;
+  overflow: hidden;
   border-radius: 50%;
   border: 12px solid $color-white;
-  overflow: hidden;
   box-shadow: $default-box-shadow;
-  display: inline-flex;
+  background-color: $color-white;
 }
 
 .line-separator {
@@ -105,10 +120,17 @@ a {
     height: 100%;
     background-color: $color-white;
     box-shadow: $default-box-shadow;
+    pointer-events: none;
   }
 
   &.line-separator--half-height {
     padding: 40px 0;
+  }
+
+  &.line-separator--overflowed {
+    &:before {
+      height: 200%;
+    }
   }
 }
 
@@ -155,9 +177,69 @@ a {
     max-width: 780px;
     padding: 0 30px;
   }
+}
 
-  .button {
-    text-transform: uppercase;
-    padding: 0 30px;
+// Header top / content header
+.content-header {
+  .content-header__background-image {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    .image {
+      display: inline-flex;
+      position: absolute;
+      left: 50%;
+      bottom: 80px;
+      transform: translateX(-50%);
+      width: 200vh;
+      max-width: 1600px;
+    }
+  }
+
+  .content-header__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    > .content {
+       text-align: center;
+    }
+
+    .pretitle,
+    .subtitle,
+    .title {
+      margin: 0 auto;
+    }
+   .pretitle {
+        text-transform: uppercase;
+      }
+    .title {
+      font-size: 3.5em;
+      line-height: 1em;
+      text-transform: uppercase;
+    }
+    .subtitle {
+      margin-top: 20px;
+      max-width: 530px;
+    }
+
+    .btn {
+      margin-bottom: 20px;
+    }
+
+    .actions {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+    }
+
+
+
   }
 }
