CAROUSEL - WIP : Improvec way for handling carousel and animation.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -223,6 +223,7 @@ a {
 }
 
 // Header top / content header
+/*
 .content-header {
   overflow: hidden;
   position: relative;
@@ -265,3 +266,4 @@ a {
     }
   }
 }
+*/
