--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -5,7 +5,25 @@
     height: 100vh;
     margin-right: auto;
   }
+  .slide-in {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    //background: #066bb8;
+    transform-origin: left;
+  }
 
+  .slide-out {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    //background: #066bb8;
+    transform-origin: right;
+  }
   .embla__viewport {
     overflow: hidden;
     width: 100%;
