--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -5,25 +5,6 @@
     height: 100vh;
     margin-right: auto;
   }
-  .slide-in {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    //background: #066bb8;
-    transform-origin: left;
-  }
-
-  .slide-out {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    //background: #066bb8;
-    transform-origin: right;
-  }
   .embla__viewport {
     overflow: hidden;
     width: 100%;
@@ -45,11 +26,14 @@
     -khtml-user-select: none;
     -webkit-tap-highlight-color: transparent;
     margin-left: -10px;
+    //scroll-snap-type: x mandatory;
+    //overflow-x: auto;
   }
 
   .embla__slide {
     position: relative;
-    min-width: 70vw;
+    min-width: 100vw;
+    //scroll-snap-align: center;
   }
 
   .embla__slide__inner {
