--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -280,3 +280,11 @@ a {
   width: 100%;
   max-width: 100vw;
 }
+
+.circle-wrapper{
+  * {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+}
