--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,282 +1,18 @@
 @use 'sass:math';
 
-// Variables
-$color-text: #000000;
-$color-gray: #212121;
-$color-white: #ffffff;
-$color-black: #212322;
 
-$default-transition: all .6s ease-in-out;
-$default-box-shadow: -3px -3px 6px rgba(255, 255, 255, 0.5),
-    2px 2px 6px rgba(95, 92, 89, 0.12),
-    4px 4px 11px rgba(177, 167, 162, 0.4);
+@import "_variables";
+@import "mixins/_breakpoints";
 
-$default-sparation: 30px;
-$default-section-padding: 20px;
+@import "_reset";
 
-// Resets
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: $color-text;
-}
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-button {
-  border: none;
-  background: none;
-  cursor: pointer;
-}
-img{
-  width: 100%;
-  height: auto;
-}
+@import "_typograpy";
+@import "_layout";
 
-// Styles
-html {
-  height: 100%;
-}
+@import "_atoms";
 
-body {
-  height: 100%;
-
-  #__next {
-    height: 100%;
-
-    > .container {
-      height: 100%;
-    }
-  }
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  display: inline-block;
-}
-
-
-// Buttons
-.btn {
-  text-transform: uppercase;
-  padding: 0 1em;
-}
-
-.container-fit {
-  height: 100%;
-  width: 100%;
-}
-.container-force-screen-fit-y {
-  height: 100vh;
-  width: 100%;
-}
-
-.content {
-  max-width: 982px;
-  margin: 0 auto;
-  padding: 0 $default-sparation / 2;
-}
-
-.round-wp{
-  display: inline-flex;
-  overflow: hidden;
-  border-radius: 50%;
-  border: 12px solid $color-white;
-  box-shadow: $default-box-shadow;
-  background-color: $color-white;
-}
-
-.line-separator {
-  position: relative;
-  padding: $default-section-padding * 2 0;
-  width: 100%;
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: 1px;
-    display: block;
-    width: 2px;
-    height: 100%;
-    background-color: $color-white;
-    box-shadow: $default-box-shadow;
-    pointer-events: none;
-  }
-
-  &.line-separator--half-height {
-    padding: $default-section-padding 0;
-  }
-
-  &.line-separator--overflowed {
-    &:before {
-      height: 200%;
-    }
-  }
-}
-
-// Intro page.
-.container-video-intro {
-  position: relative;
-
-  video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .btn-begin-experience {
-    background-color: $color-white;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    box-shadow: $default-box-shadow;
-    transition: $default-transition;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: .15em;
-    color: $color-black;
-    white-space: break-spaces;
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-
-    &:hover {
-      background-color: rgba($color-white, .8);
-    }
-  }
-
-  .btn-skip-intro {
-    min-width: 108px;
-    border-radius: 20px;
-    padding: .5em 1em;
-    color: $color-black;
-    font-size: 14px;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-    background-color: rgba($color-white, .9);
-    transition: $default-transition;
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    opacity: 0;
-
-    &:hover {
-      background-color: rgba($color-white, 1);
-    }
-  }
-}
-
-//Carousel item and Header top content
-.carousel-item,
-.content-header__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  padding: 40px 0 100px 0;
-  text-align: center;
-
-  .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-
-  .image,
-  .btn {
-    margin-bottom: $default-sparation;
-  }
-
-  .image {
-    max-width: 530px;
-    //height: 100%;
-    //width: auto;
-  }
-
-  .title {
-    text-transform: uppercase;
-    font-size: 2em;
-    line-height: 1em;
-    max-width: 650px;
-  }
-
-  .actions {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-  }
-}
-
-// Header top / content header
-/*
-.content-header {
-  overflow: hidden;
-  position: relative;
-
-  > .image {
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    max-width: 1600px;
-    bottom: 10%;
-    transform: scale(1.5);
-  }
-
-
-  .content-header__container {
-    .image {
-      z-index: -2;
-      position: relative;
-      opacity: 0;
-    }
-
-    .pretitle,
-    .subtitle {
-      margin: 0 auto;
-    }
-    .pretitle {
-      text-transform: uppercase;
-      margin-bottom: math.div($default-sparation, 2);
-    }
-    .title {
-      margin-bottom: $default-sparation;
-      font-size: 3.5em;
-      max-width: 780px;
-    }
-    .subtitle {
-      //margin-top: $default-sparation;
-      max-width: 530px;
-    }
-  }
-}
-*/
-
-.overlay {
-  z-index: 1;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.8);
-  will-change: opacity;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 100vw;
-}
+@import "components/_intro";
+@import "components/_header-top";
+@import "components/_separator";
+@import "components/_text-center";
+@import "components/_bottom-navigation";
