Different typographies and background support in image text one column component.

--- a/styles/_typograpy.scss
+++ b/styles/_typograpy.scss
@@ -25,7 +25,8 @@ body {
 
 .header-xlarge,
 .header-h1,
-.header-h2{
+.header-h2,
+.header-h3 {
   font-family: $font-family-serif;
   line-height: $line-height-xs;
 }
