--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,5 +14,5 @@
 @import "components/_intro";
 @import "components/_header-top";
 @import "components/_separator";
-@import "components/_text-center";
+@import "components/_component-image-text-one-column";
 @import "components/_bottom-navigation";
