--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -51,6 +51,11 @@ a {
   border: 12px solid $color-white;
   box-shadow: $default-box-shadow;
   background-color: $color-white;
+  max-width: 373px;
+
+  .size--big {
+    max-width: 580px;
+  }
 }
 
 .overlay {
