--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -92,3 +92,6 @@ $default-box-shadow--hover: -6px -6px 3px rgba(255, 255, 255, 0.5),
 
 $default-separation: 30px;
 $default-section-padding: 30px;
+
+$round-image-size: 373px;
+$round-image-size-big: 580px;
