--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,4 +15,5 @@
 @import "components/_header-top";
 @import "components/_separator";
 @import "components/_component-image-text-one-column";
+@import "components/_component-media-with-expansion";
 @import "components/_bottom-navigation";
