--- a/styles/components/_component-image-text-one-column.scss
+++ b/styles/components/_component-image-text-one-column.scss
@@ -2,10 +2,22 @@
 .component-image-text-one-column {
   background-repeat: no-repeat;
   background-position: 100% 0;
-  background-size: 50%;
+  background-size: 85%;
+  background-blend-mode: multiply;
+  //opacity: 0.2;
+
+  @include media-breakpoint-up(md) {
+    background-size: 50%;
+  }
 
   .column {
     padding: $default-separation;
+    display: flex;
+    flex-direction: column;
+
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 
   .title {
@@ -19,10 +31,15 @@
   }
 
   .floating-media {
-    float: left;
-    margin-left: -30%;
-    padding: 2em;
-    shape-outside: circle(50% at 50% 50%) padding-box;
+    margin: $default-separation * 2 auto ;
 
+    @include media-breakpoint-up(md) {
+      float: left;
+      padding: 2em;
+      margin: 0;
+      margin-left: -85%;
+      margin-top: calc(100% - #{$round-image-size-big} + 4em);
+      shape-outside: circle(50% at 50% 50%) padding-box;
+    }
   }
 }
