--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -59,15 +59,16 @@ a {
 }
 
 .overlay {
-  z-index: 1;
+  z-index: 10;
   position: fixed;
   background: rgba($color_white, 0.6);
   backdrop-filter: blur(80px);
   will-change: opacity;
   top: 0;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  //bottom: 0;
+  left: 0;
+  //transform: translateX(-50%);
   width: 100%;
-  max-width: 100vw;
+  //max-width: 100vw;
+  padding: $default-separation;
 }
