--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -52,6 +52,7 @@ a {
   box-shadow: $default-box-shadow;
   background-color: $color-white;
   max-width: $round-image-size;
+  aspect-ratio: 1 / 1;
 
   &.size--big {
     max-width: $round-image-size-big;
@@ -65,10 +66,8 @@ a {
   backdrop-filter: blur(80px);
   will-change: opacity;
   top: 0;
-  //bottom: 0;
   left: 0;
-  //transform: translateX(-50%);
   width: 100%;
-  //max-width: 100vw;
+  min-height: 100vh;
   padding: $default-separation;
 }
