STYLE - use webfonts in font stack

--- a/styles/_typograpy.scss
+++ b/styles/_typograpy.scss
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: Ampersand;
+  src: url(/fonts/ampersand-medium.woff) format("woff");
+}
+
+@font-face {
+  font-family: Pangram;
+  src:
+    url(/fonts/pangram-regular.woff2) format("woff2"),
+    url(/fonts/pangram-regular.woff2) format("woff");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Pangram;
+  src:
+    url(/fonts/pangram-bold.woff2) format("woff2"),
+    url(/fonts/pangram-bold.woff2) format("woff");
+  font-weight: 700;
+}
+
 .text-body,
 body {
   font-family: $font-family-sans-serif;
