Fixed menu position issue on reload scrolled pages.

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -17,6 +17,11 @@ body {
   }
 }
 
+.main-container {
+  width: 100%;
+  position: relative;
+}
+
 .container {
   margin: 0 auto;
   max-width: map-get($container-max-widths, 'xxl');
