Review font styles in the carousel item

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -22,8 +22,7 @@ a {
 
 // Buttons
 .btn {
-  text-transform: uppercase;
-  padding: 0 1em;
+  @extend %text-label;
 }
 .icon-button {
   @extend %rounded-with-shadow;
