--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+  
     .close-popup {
       position: absolute;
       right: math.div($default-separation, 2);
@@ -28,6 +28,10 @@
         height: 100%;
         width: 100%;
         object-fit: contain;
+      }
+      video{
+        max-width: 900px;
+        width: 100%;
       }
     }
   }
