--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -27,6 +27,42 @@
     -webkit-tap-highlight-color: transparent;
     margin-left: -10px;
     transition: all 2s;
+    /*.embla_slide_present{
+      transition: all 2s;
+      &.no_selected{
+        transition: all 2s;
+
+        //background-color: red;
+        &.first{
+          transform: translateX(100px);
+          .content-header__container{
+            align-items: flex-end;
+            transition: all 2s;
+
+          }
+        }
+        &.last{
+          transform: translateX(-100px);
+          .content-header__container{
+            align-items: flex-start;
+            transition: all 2s;
+
+          }
+        }
+        filter:blur(1px);
+        .content-header__container{
+          width: 580px;          
+          transition: all 2s;
+
+        }
+        .content{
+          transition: all 2s;
+
+          margin: 0;
+        }
+
+      }
+    }*/
     //scroll-snap-type: x mandatory;
     //overflow-x: auto;
   }
