--- a/styles/_typograpy.scss
+++ b/styles/_typograpy.scss
@@ -36,6 +36,7 @@ p {
 .header-h2,
 .header-h3 {
   font-family: $font-family-serif;
+  font-weight: $font-weight-normal;
   line-height: $line-height-xs;
 }
 .header-xlarge{
