--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -1,20 +1,52 @@
 //Carousel item and Header top content
-.carousel-item,
 .content-header__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   position: relative;
   padding: 40px 0 100px 0;
   text-align: center;
 
-  .content {
+  .header-inner-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     height: 100%;
+    transition: all 2s ease-in-out;
+    margin-left: 0;
+    transform: translateX(0);
+    max-width: map-get($container-max-widths, lg);
+    z-index: 2;
+
+    @include media-breakpoint-up(lg) {
+      margin-left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .no_selected & {
+      opacity: .3;
+      max-width: $round-image-size-big;
+    }
+
+    .first & {
+      margin-left: 0;
+      transform: translateX(50px);
+
+      @media (min-width: $round-image-size-big) {
+        margin-left: calc(100% - #{$round-image-size-big});
+        transform: translateX(100px);
+      }
+    }
+
+    .last & {
+      margin-left: 0;
+      transform: translateX(-50px);
+
+      @media (min-width: $round-image-size-big) {
+        transform: translateX(-100px);
+      }
+    }
+
   }
 
   .image,
@@ -33,6 +65,7 @@
     font-size: 2em;
     line-height: 1em;
     max-width: 650px;
+    margin: 0 auto;
   }
 
   .actions {
@@ -42,50 +75,3 @@
     width: 100%;
   }
 }
-
-// Header top / content header
-/*
-.content-header {
-  overflow: hidden;
-  position: relative;
-
-  > .image {
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    max-width: 1600px;
-    bottom: 10%;
-    transform: scale(1.5);
-  }
-
-
-  .content-header__container {
-    .image {
-      z-index: -2;
-      position: relative;
-      opacity: 0;
-    }
-
-    .pretitle,
-    .subtitle {
-      margin: 0 auto;
-    }
-    .pretitle {
-      text-transform: uppercase;
-      margin-bottom: math.div($default-separation, 2);
-    }
-    .title {
-      margin-bottom: $default-separation;
-      font-size: 3.5em;
-      max-width: 780px;
-    }
-    .subtitle {
-      //margin-top: $default-separation;
-      max-width: 530px;
-    }
-  }
-}
-*/
-
