--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    transition: all 2s ease-in-out;
+    transition: transform 1s ease-in-out, opacity 2s ease-in-out, max-width 1s ease-in-out, margin-left 1s ease-in-out;
     margin-left: 0;
     transform: translateX(0);
     max-width: map-get($container-max-widths, lg);
@@ -46,7 +46,6 @@
         transform: translateX(-100px);
       }
     }
-
   }
 
   .image,
