--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,5 @@
 @import "components/component-intro-text";
 @import "components/_component-media-with-expansion";
 @import "components/_bottom-navigation";
+@import "components/_menu-button";
+@import "components/_menu-secondary";
