Main menu - theming

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,4 +21,5 @@
 @import "components/_component-media-with-expansion";
 @import "components/_bottom-navigation";
 @import "components/_menu-button";
+@import "components/_menu-main";
 @import "components/_menu-secondary";
