--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,3 +23,4 @@
 @import "components/_menu-button";
 @import "components/_menu-main";
 @import "components/_menu-secondary";
+@import "components/_socials";
