--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -86,7 +86,6 @@ a {
     display: block;
     width: 40px;
     height: 40px;
-    outline: 1px solid red;
-    margin-left: $grid-gutter-width / 2;
+    background: url("../public/images/close.svg") no-repeat center center;
   }
 }
