Issue #10: Theme component accordion

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,3 +24,4 @@
 @import "components/_menu-main";
 @import "components/_menu-secondary";
 @import "components/_socials";
+@import "components/_accordion";
