Issue #12: Create component Quote

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,3 +25,4 @@
 @import "components/_menu-secondary";
 @import "components/_socials";
 @import "components/_accordion";
+@import "components/_quote";
