Issue #13: Component columns text

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,3 +26,4 @@
 @import "components/_socials";
 @import "components/_accordion";
 @import "components/_quote";
+@import "components/_columns-text";
