Issue #13: Component quote and text

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,3 +27,4 @@
 @import "components/_accordion";
 @import "components/_quote";
 @import "components/_columns-text";
+@import "components/_quote-paragraph-column";
