--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,3 +28,4 @@
 @import "components/_quote";
 @import "components/_columns-text";
 @import "components/_quote-paragraph-column";
+@import "components/_text-bg";
