--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -8,9 +8,6 @@
   text-align: center;
 
   .header-inner-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     height: 100%;
     transition: transform 1s ease-in-out, opacity 2s ease-in-out, max-width 1s ease-in-out, margin-left 1s ease-in-out;
     margin-left: 0;
@@ -53,18 +50,10 @@
     margin-bottom: $default-separation;
   }
 
-  .image {
-    max-width: 530px;
-    //height: 100%;
-    //width: auto;
-  }
-
   .title {
     text-transform: uppercase;
     font-size: 2em;
     line-height: 1em;
-    max-width: 650px;
-    margin: 0 auto;
   }
 
   .actions {
@@ -72,5 +61,53 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    z-index: 2;
+  }
+}
+
+// Animation
+.content-header__container {
+  background: transparent;
+  transition: background 1s ease-in-out;
+
+  .image {
+    max-width: 530px;
+    object-fit: cover;
+    aspect-ratio: 1/1;
+    transition: all 1s ease-in-out;
+    will-change: transform;
+  }
+
+  .header-inner-content__text {
+    position: relative;
+    margin: 0 auto;
+    max-width: map-get($container-max-widths, 'md');
+    z-index: 1;
+    transition: all 1s ease-in-out;
+  }
+
+  .title {
+    transition: all 1s ease-in-out;
+  }
+
+  &[data-animation="active"] {
+    background: $body-bg;
+    overflow: hidden;
+
+    .image {
+      opacity: .5;
+      border-width: 4px;
+      transform: translate(0, -50%) scale(3);
+    }
+
+    .header-inner-content__text {
+      max-width: map-get($container-max-widths, 'lg');
+      transform: translateY(-250px);
+    }
+
+    .title {
+      @extend .header-xlarge;
+      margin: $grid-gutter-width/2 0;
+    }
   }
 }
