Issue #18: Footer component

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -42,6 +42,7 @@ $font-size-xs: $font-size-base * 0.667; // 12px
 //$font-size-sm: $font-size-base * .875 !default;
 $font-size-lg: $font-size-base * 1.222 !default; // 22px
 $font-size-xlg: $font-size-base * 1.333 !default; // 24px
+$font-size-xxlg: $font-size-base * 1.556 !default; // 28px
 
 //$font-weight-lighter: lighter !default;
 //$font-weight-light: 300 !default;
