--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,6 +16,7 @@
 
 @import "components/_intro";
 @import "components/_header-top";
+@import "components/_footer";
 @import "components/_separator";
 @import "components/component-intro-text";
 @import "components/_component-media-with-expansion";
