--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -7,6 +7,18 @@ footer[role="contentinfo"] {
     padding: 5rem 0;
   }
 
+  .footer__scrolltop {
+    margin-bottom: 5rem;
+
+    button {
+      margin-bottom: $grid-gutter-width / 2;
+    }
+
+    @include media-breakpoint-up(md) {
+      display: none;
+    }
+  }
+
   .footer__title {
     font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
