Issue #18: Footer scroll top fixed on desktop

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -15,7 +15,11 @@ footer[role="contentinfo"] {
     }
 
     @include media-breakpoint-up(md) {
-      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      margin: 0;
+      z-index: 1;
     }
   }
 
