--- a/styles/components/_accordion.scss
+++ b/styles/components/_accordion.scss
@@ -50,4 +50,10 @@
   .chakra-accordion__panel {
     padding-bottom: 1.438rem;
   }
+
+  .readmore {
+    margin-left: 1rem;
+    padding-bottom: 2px;
+    border-bottom: 1px solid $color_black;
+  }
 }
