Issue #22: Create and theme component text image with background

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,3 +30,4 @@
 @import "components/_columns-text";
 @import "components/_quote-paragraph-column";
 @import "components/_text-bg";
+@import "components/_text-image-bg";
