--- a/styles/components/_menu-main.scss
+++ b/styles/components/_menu-main.scss
@@ -21,5 +21,13 @@
     &:last-child {
       margin-bottom: 0;
     }
+
+    a {
+      transition: opacity .25s ease-in-out;
+
+      &:hover, &:focus {
+        opacity: .6;
+      }
+    }
   }
 }
