--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -14,7 +14,7 @@
     }
     }
   }
-  
+
   .embla__viewport {
     overflow: hidden;
     width: 100%;
@@ -56,19 +56,21 @@
   .embla__button {
     outline: 0;
     cursor: pointer;
-    background-color: transparent;
+    background-color: $color_white;
     touch-action: manipulation;
     position: absolute;
     z-index: 1;
     top: 50%;
     transform: translateY(-50%);
     border: 0;
-    width: 30px;
-    height: 30px;
+    width: 64px;
+    height: 64px;
     justify-content: center;
     align-items: center;
-    fill: #1bcacd;
+    fill: $color_black_soft;
     padding: 0;
+    border-radius: 50%;
+    box-shadow: $default-box-shadow;
   }
 
   .embla__button:disabled {
@@ -77,14 +79,22 @@
   }
 
   .embla__button__svg {
-    width: 100%;
-    height: 100%;
+    width: 15px;
+    height: 15px;
   }
 
   .embla__button--prev {
-    left: 27px;
+    left: 10%;
   }
 
   .embla__button--next {
-    right: 27px;
+    right: 10%;
   }
+
+body.is-scrolled {
+  .embla {
+    .embla__button {
+      display: none;
+    }
+  }
+}
