--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -127,6 +127,12 @@
     transition: all .3s ease-out;
   }
 
+  .pretitle,
+  .subtitle {
+    opacity: 0;
+    transition: all .3s ease-out;
+  }
+
   // ANIMATION ACTIVE
   &[data-animation="active"] {
     background: $body-bg;
@@ -159,6 +165,11 @@
       @extend .header-xlarge;
       margin: $grid-gutter-width/2 0;
       //transform: scale(2);
+    }
+
+    .pretitle,
+    .subtitle {
+      opacity: 1;
     }
 
     .actions {
