VIDEO - Improved transition for video and avoid the skip button to dissapear.

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -30,6 +30,12 @@
     &:hover {
       background-color: rgba($color-white, .8);
     }
+    &.playing{
+
+      &:hover{
+        cursor: default;
+      }
+    }
   }
 
   .btn-skip-intro {
