--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,3 +31,4 @@
 @import "components/_quote-paragraph-column";
 @import "components/_text-bg";
 @import "components/_text-image-bg";
+@import "components/_audio";
