Issue #19: Adjust section padding

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -60,5 +60,6 @@ body {
 }
 
 .section {
-  padding: $default-section-padding 0;
+  padding-top: $default-section-padding;
+  padding-bottom: $default-section-padding;
 }
